# Study

./: .gitignore
Adaptive-Mesh-Refinement/: Adaptive-Mesh-Refinement.tex  Makefile
Adaptive-Mesh-Refinement/design/: Makefile  ref.bib  slide.tex
FEM-Mesh-Generate/: FEM-Mesh-Generate.tex
FEM/01-Mesh-Generate/: make_grid.cc
FEM/02-Elliptic/: elliptic.tex
FEM/02p-Elliptic-Multigrid/: multigrid.cc
FEM/03-Heat/: CMakeLists.txt  heat.cc
FEM/04-Advection-Diffusion/: advection-diffusion.cc
FEM/05-Convection-Diffusion/: CMakeLists.txt  convection-diffusion.cc
FEM/06p-INSE-GePUP/: single-vortex.cc
FEM/08-Mixed-FEM/: CMakeLists.txt
FEM/09-Stokes-System/: CMakeLists.txt
FEM/09-Stokes-System/Projection-Method/: CMakeLists.txt  stokes.cc
FEM/1-Mesh-Generate/: CMakeLists.txt
FEM/2p-Elliptic-Multigrid/: CMakeLists.txt
FEM/3-Heat/: circle-grid.inp  heat.cc
FEM/4-Advection-Diffusion/: CMakeLists.txt
FEM/5-Convection-Diffusion/: convection-diffusion.cc
FEM/6-INSE-UPPE/: CMakeLists.txt  compile_commands.json  inse-uppe.cc
FEM/7-Mixed-FEM/: mixed-fem.cc
FEM/8-Stokes-System/: stokes.cc
FEM/FEM-Advection-Diffusion/: advection-diffusion.cc
FEM/FEM-Elliptic-Homework/: elliptic.tex
FEM/report-1to6/: Makefile  reference.bib  report-wenchong-Oct-2023.tex
FEM/step-35-cylindrical-turbulence-2D/: Makefile  parameter-file.prm  step-35.cc
Infiniband/: Infiniband.tex  Makefile
Spectral-Methods/: Spectral-Methods.tex  elegantbook.cls  reference.bib
Spectral-Methods/eps/: AdvDif.eps
Spectral-Methods/src/: Makefile  advdif2D.cpp  advdif2D.h  diffusion2D.cpp  diffusion2D.h  draw.m  drawAdvDif.m  drawDiffusion.m  err.m  fft2D.cpp  fft2D.h  function2D.cpp  function2D.h  idpair.h  matrix.cpp  matrix.h  maxerr.m  result.txt  sparseMatrix.cpp  testFFT  (+6 more)
(+87 files in other folders)
